refactor: improve structure of project
